--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>法学引注转换器</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', system-ui, -apple-system, sans-serif;
             background-color: #f8fafc;
+        }
+        /* 衬线字体定义：优先 Noto Serif，备选系统宋体 */
+        .citation-font {
+            font-family: 'Noto Serif SC', 'SimSun', 'STSong', 'Songti SC', 'Source Serif Pro', Georgia, serif;
         }
         /* 自定义滚动条样式 */
         .custom-scrollbar::-webkit-scrollbar {
