--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         .animate-glow {
             animation: subtle-glow 3s infinite;
         }
+
+        @keyframes shake {
+          0%, 100% { transform: translateX(0); }
+          25% { transform: translateX(-5px); }
+          75% { transform: translateX(5px); }
+        }
+        .animate-shake {
+          animation: shake 0.2s cubic-bezier(.36,.07,.19,.97) both;
+        }
     </style>
 <script type="importmap">
 {
