fix: Improve layout and styling for mobile and fixed height
The viewport meta tag has been updated to prevent zooming on mobile devices. Additionally, `html`, `body`, and `#root` elements are now set to `100%` height and `overflow: hidden` to ensure a fixed and consistent application height across all screen sizes, especially on mobile. Scrollbar styling has been refined for a cleaner appearance. The header is no longer sticky, aligning better with the fixed screen height. Password input styling has also been adjusted to fit the new screen constraints.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>法学引注转换器</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-        /* 全局应用衬线字体栈，取消无衬线字体的默认干扰 */
         :root {
             --font-serif: 'Noto Serif SC', 'SimSun', 'STSong', 'Songti SC', 'Source Serif Pro', Georgia, serif;
+        }
+
+        html, body, #root {
+            height: 100%;
+            overflow: hidden; /* 彻底固定屏幕 */
         }
 
         body {
@@ -20,17 +24,15 @@
             -moz-osx-font-smoothing: grayscale;
         }
         
-        /* 强制所有交互元素继承衬线字体 */
         input, textarea, select, button, span, div, h1, h2, h3, p {
             font-family: var(--font-serif) !important;
         }
 
-        /* 自定义滚动条样式 */
         .custom-scrollbar::-webkit-scrollbar {
-            width: 4px;
+            width: 5px;
         }
         .custom-scrollbar::-webkit-scrollbar-track {
-            background: transparent;
+            background: rgba(241, 245, 249, 0.5);
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
             background: #e2e8f0;
@@ -40,7 +42,6 @@
             background: #cbd5e1;
         }
 
-        /* 动画微调 */
         @keyframes subtle-glow {
             0%, 100% { box-shadow: 0 0 15px rgba(99, 102, 241, 0.1); }
             50% { box-shadow: 0 0 25px rgba(99, 102, 241, 0.2); }
