--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
         html, body, #root {
             height: 100%;
-            overflow: hidden; /* 彻底固定屏幕 */
+        }
+
+        /* 仅在桌面端锁定全局滚动 */
+        @media (min-width: 1024px) {
+            html, body, #root {
+                overflow: hidden;
+            }
         }
 
         body {
